--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -39,11 +39,15 @@ jobs:
           flags: "-t http/cves -type http -stats -ni -sresp"
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r output.zip output
+
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v4
         with:
           name: output
-          path: output/**
+          path: output.zip
       
   # success:
   #   name: Send success notification
