--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -9,7 +9,6 @@ env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
   NUCLEI_VERSION: '3.2.5'
-  POETRY_VERSION: '1.8.2'
 
 jobs:
   project-runner:
@@ -48,7 +47,32 @@ jobs:
         with:
           name: output
           path: output.zip
-      
+
+  process-artifacts:
+      name: Generate report
+      runs-on: ubuntu-latest
+      needs: [project-runner]
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+
+        - name: Setup Go
+          uses: actions/setup-go@v5
+          with:
+            go-version: '1.22.3'
+            cache: 'go-build'
+
+        - name: Download artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: output
+            path: output
+
+        - name: Build report
+          run: |
+            go build
+            ./project-seaweed -o output
+
   # success:
   #   name: Send success notification
   #   runs-on: ubuntu-latest
