--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -59,8 +59,7 @@ jobs:
         - name: Setup Go
           uses: actions/setup-go@v5
           with:
-            go-version: '1.22.3'
-            cache: 'go-build'
+            go-version: '^1.22.3'
 
         - name: Download artifacts
           uses: actions/download-artifact@v4
