Update use of Slack action for  v2

--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -6,8 +6,6 @@ on:
   workflow_dispatch:
 env:
   REPO_OWNER: ${{ github.repository_owner }}
-  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-  SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
   NUCLEI_VERSION: '3.2.5'
 
 jobs:
@@ -92,6 +90,8 @@ jobs:
      - name: Success
        uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d # v2.0.0
        with:
+         webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+         webhook-type: incoming-webhook
          payload: |
            {
            "text": "Testing finished!",
